# globule

./: .gitignore  .repomixignore  CHANGELOG.md  COMMIT_MSG.tmp  CONSOLE_COMMANDS.txt  CONTRIBUTING.md  Dockerfile  ENGINEERING_KICKOFF_MVP.md  INTEGRATION_TESTS_IMPROVEMENTS.md  MVP_BUILD_PLAN.md  MVP_IMPLEMENTATION_PLAN.md  MVP_README.md  PROJECT_CHARTER.md  README.md  REVISED_MVP_PLAN.md  USAGE.md  check_vec0.py  config.yaml  docker-compose.yml  improvements-coached-A.txt  phase 2 complete true.txt  pyproject.toml  repomix-output.xml  requirements.txt  ring_forge.db  sauron_complete_history.json  sauron_complete_immortalized_history.json  schema-modular-implementation.txt  setup_dev.py  sss  test_basic.py  test_globule.db  test_messaging_integration.py  test_phase1_outcome.py  test_schema_demo.py  test_structure.py
.claude/: glass-implementation-raw.txt  phase-2-starting.txt  settings.local.json
docs/: ARCHITECTURE-PHASE-2.md  ARCHITECTURE-PHASE-3.md  api.md  architecture.md  cli-reference.md  developer-setup.md  glass-engine-guide.md  glass-engine-quick-start.md  glass_engine_blueprint.md  glass_engine_integration_summary.md  glass_engine_lld.md  glass_engine_philosophy.md  phase2-intelligence-guide.md
docs/1_Foundations/: 10_Cathedral-of-Recursive-Understanding.md  11_Vision-and-Strategy.md  12_Project-Roadmap.md  13_Architectural-Philosophy_Narrative.md
docs/2_System_Architecture/: 20_High-Level-Design.md  21_Technical-Architecture.md  22_Component-Shopping-List.md  23_Component_Interaction_Flows.md
docs/3_Core_Components/30_Configuration_System/: 30_LLD_Configuration-System.md  31_Research_Configuration-System.md
docs/3_Core_Components/31_Schema_Engine/: 30_LLD_Schema-Engine.md  31_Research_Schema-Engine.md
docs/3_Core_Components/32_Adaptive_Input_Module/: 30_LLD_Adaptive_Input_Module.md  31_Research_Adaptive_Input_Module.md
docs/3_Core_Components/33_Semantic_Embedding_Service/: 30_LLD_Semantic_Embedding_Service.md  31_Research_Semantic_Embedding_Service.md
docs/3_Core_Components/34_Structural_Parsing_Service/: 30_LLD_Structural_Parsing_Service.md  31_Research_Structural_Parsing_Service.md
docs/3_Core_Components/35_Orchestration_Engine/: 30_LLD_Orchestration_Engine.md  31_Research_Orchestration_Engine.md
docs/3_Core_Components/36_Intelligent_Storage_Manager/: 30_LLD_Intelligent_Storage_Manager.md  31_Research_Intelligent_Storage_Manager.md
docs/3_Core_Components/37_Interactive_Synthesis_Engine/: 30_LLD_Interactive_Synthesis_Engine.md  31_Research_Interactive_Synthesis_Engine.md
docs/Artwork/: CATHEDRAL_OF_CODE.txt  DUAL_INTELLIGENCE.txt  RIPPLES_OF_RELEVANCE.txt  SEMANTIC_CONSTELLATION.txt  THE_DRAFTING_TABLE.txt  THE_WEAVER.txt
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md
examples/: usage-examples.py
examples/config/: system-config.yaml  user-config.yaml
examples/deployments/: docker-compose.yml  kubernetes.yaml
examples/environments/: development.yaml  production.yaml  staging.yaml
examples/tutorials/: glass_engine_core.py
examples/tutorials/modes/: debug_mode.py  demo_mode.py  demo_scenes.py  interactive_mode.py  simple_demo.py
globule/: __init__.py  cli.py  config.py  embedding_engine.py  glass.py  glass_errors.py  glass_hooks.py  glass_reports.py  parser_engine.py  processor.py  query_engine.py  storage.py  synthesis.py
src/globule/: __init__.py
src/globule.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/globule/cli/: __init__.py  main.py
src/globule/clustering/: __init__.py  semantic_clustering.py
src/globule/config/: __init__.py  errors.py  manager.py  models.py  paths.py  settings.py  sources.py
src/globule/core/: __init__.py  api.py  canvas_skeleton.py  (+7 more)
tests/: TEST_AUDIT_REPORT.md  conftest.py  test_ollama_parser.py  test_vector_search.py  test_walking_skeleton.py
tests/contracts/: test_config_contracts.py  test_processor_contracts.py
tests/core/: test_interfaces.py  test_models.py
tests/data/: test_embeddings.json
tests/integration/: README.md  test_config_integration.py  test_custom_schemas.py  test_headless_integration.py  test_vector_search.py
tests/orchestration/: __init__.py  test_engine.py
tests/services/: test_ollama_embedding_adapter.py  test_ollama_parsing_adapter.py
tests/storage/: test_sqlite_adapter.py  test_sqlite_manager.py
tests/unit/: test_config_basesettings.py  test_config_comprehensive.py  test_config_coverage.py  test_config_focused.py  test_config_manager.py  test_config_system_layer.py  test_core_logic.py  test_factories.py  test_factories_comprehensive.py  test_legacy_settings_coverage.py  test_ollama_parser.py  test_orchestration_processor_integration.py  test_parsing_processors.py  test_processor_router.py
tests/utils/: embedding_generator.py
(+92 files in other folders)
